Added createVC API, changed development in context url to main
